[package]
name = "squoosh-oxipng"
version = "0.1.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--no-validation"]

[lib]
crate-type = ["cdylib"]

[dependencies]
oxipng = { version = "4.0.3", default-features = false, features = ["libdeflater"] }
libdeflater = { version = "0.7.1", features = ["freestanding"] }
wasm-bindgen = "0.2.73"
log = { version = "0.4.11", features = ["release_max_level_off"] }
wasm-bindgen-rayon = { version = "1.0", optional = true }

[profile.release]
lto = true
opt-level = "s"

[features]
parallel = ["oxipng/parallel", "wasm-bindgen-rayon"]
