[package]
name = "squoosh-png"
version = "0.1.0"
authors = ["Surma <surma@surma.dev>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
png = "0.16.7"
# wasm-bindgen 0.2.66+ emits Wasm using exported mutable globals,
# which is a stage 4 feature and not well supported.
# https://github.com/rustwasm/wasm-pack/issues/886
wasm-bindgen = "=0.2.65"
# Need to pin web-sys to 0.3.42, because newer versions depend
# on newer versions of wasm-bindgen.
web-sys = { version = "=0.3.42", features = ["ImageData"] }
log = { version = "0.4", features = ["release_max_level_off"] }

[profile.release]
lto = true
opt-level = "s"
