[package]
name = "squoosh-png"
version = "0.1.0"
authors = ["Surma <surma@surma.dev>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
png = "0.16.7"
wasm-bindgen = "0.2.68"
web-sys = { version = "0.3.45", features = ["ImageData"] }

[profile.release]
lto = true
opt-level = "s"
