[package]
name = "squoosh-visdiff"
version = "0.1.0"
authors = ["Surma <surma@surma.link>"]
edition = "2018"
publish = false

[lib]
#crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2.38"
dssim-core = "2.11.3"
imgref = "1.7.0"
rgb = "0.8.24"
rayon-core = "1.7.1"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

#[dependencies.dssim]
#path = "/Users/surma/src/github.com/kornelski/dssim"

#dssim = "2.11.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
